--- a/addon/templates/components/table-columns.hbs
+++ b/addon/templates/components/table-columns.hbs
@@ -5,7 +5,7 @@
         {{component column.headerComponent
           table=table
           column=column
-          classNames=column.headerClassNames
+          classNames=headerClassNames
           onColumnWidthChange=(action 'columnWidthChanged')}}
       {{/each}}
     </tr>
