--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -26,6 +26,10 @@ $icon-font-path: '/assets/bootstrap/';
 	50% {background-color: #554339}
 }
 
+.header-color {
+  background-color: white;
+}
+
 .collapsable {
   background: #aaa;
 
