Add background color to dummy app headers
* Add color to ensure sticky headers don’t show through to content
behind (paginated tables)

--- a/addon/templates/components/table-columns.hbs
+++ b/addon/templates/components/table-columns.hbs
@@ -5,7 +5,7 @@
         {{component column.headerComponent
           table=table
           column=column
-          classNames=headerClassNames
+          classNames=column.headerClassNames
           onColumnWidthChange=(action 'columnWidthChanged')}}
       {{/each}}
     </tr>
