Add font awesome for ability to add arrows for scrolling tables

--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,5 +1,6 @@
 $icon-font-path: '/assets/bootstrap/';
 @import "bower_components/bootstrap-sass/assets/stylesheets/bootstrap";
+@import "bower_components/font-awesome/scss/font-awesome";
 
 @import "justa-table/justa-table-structure";
 @import "justa-table/justa-table-appearance";
