Add default loading text
* when paginated pages set isLoading to true, show a loading div which
can be styled by applications that leverage this
* add 1500 ms of delay to example app to demonstrate

--- a/addon/templates/components/justa-table.hbs
+++ b/addon/templates/components/justa-table.hbs
@@ -6,4 +6,5 @@
 
 {{#if paginate}}
   {{in-viewport-checker on-enter-viewport=(action 'viewportEntered')}}
+  <div class="justa-table-loader {{if isLoading 'loading' 'loaded'}}"></div>
 {{/if}}
