--- a/addon/templates/components/table-columns.hbs
+++ b/addon/templates/components/table-columns.hbs
@@ -43,4 +43,7 @@
       {{/each}}
     {{/if}}
   </tbody>
+  {{#if paginate}}
+    {{in-viewport-checker on-enter-viewport=(action 'viewportEntered')}}
+  {{/if}}
 </table>
