classNames to class
I believe this is the culprit, not positive: https://github.com/emberjs/ember.js/issues/5487

--- a/addon/templates/components/table-columns.hbs
+++ b/addon/templates/components/table-columns.hbs
@@ -5,7 +5,7 @@
         {{component column.headerComponent
           table=table
           column=column
-          classNames=column.headerClassNames
+          class=column.headerClassNames
           onColumnWidthChange=(action 'columnWidthChanged')}}
       {{/each}}
     </tr>
